--- a/client-prod.yml
+++ b/client-prod.yml
@@ -6,4 +6,4 @@ server:
 
 
 contact:
-  services: "client-prod configuration for github repo /refresh"
+  services: "client-prod configuration for github repo "
