--- a/eurekaServer.yml
+++ b/eurekaServer.yml
@@ -1,4 +1,10 @@
 server:
   port: 8070
- 
-      
+eureka:
+  instance:
+    hostname: localhost
+  client:
+    fetchRegistry: true
+    registerWithEureka : false
+    serviceUrl: 
+      defaultZone: http://${eureka.instance.hostname}:{server.port}/eureka/
