--- a/eurekaServer.yml
+++ b/eurekaServer.yml
@@ -7,4 +7,4 @@ eureka:
     fetchRegistry: true
     registerWithEureka : false
     serviceUrl: 
-      defaultZone: http://${eureka.instance.hostname}:{server.port}/eureka/
+      defaultZone: http://${eureka.instance.hostname}:${server.port}/eureka/
