--- a/eurekaServer.yml
+++ b/eurekaServer.yml
@@ -4,7 +4,7 @@ eureka:
   instance:
     hostname: localhost
   client:
-    fetchRegistry: true
+    fetchRegistry: false
     registerWithEureka : false
     serviceUrl: 
       defaultZone: http://${eureka.instance.hostname}:${server.port}/eureka/
